deleted stupid stuff

--- a/.project
+++ b/.project
@@ -14,4 +14,86 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/dungeon/frontend/assets/corner_bottom_left.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/corner_bottom_left.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/corner_bottom_right.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/corner_bottom_right.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/corner_top_left.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/corner_top_left.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/corner_top_right.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/corner_top_right.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/end_bottom.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/end_bottom.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/end_left.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/end_left.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/end_right.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/end_right.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/end_top.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/end_top.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/intersection_piece.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/intersection_piece.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/mid_horizontal.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/mid_horizontal.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/mid_vertical.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/mid_vertical.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/single_piece.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/single_piece.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/t_bottom.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/t_bottom.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/t_left.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/t_left.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/t_right.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/t_right.png</locationURI>
+		</link>
+		<link>
+			<name>src/dungeon/frontend/assets/t_top.png</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Google%20Drive/GameDev/Art/RPG/Tileset%20Basic/t_top.png</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
